tests/baselines/reference/callExpressionWithTypeParameterConstrainedToOuterTypeParameter.errors.txt
callExpressionWithTypeParameterConstrainedToOuterTypeParameter.ts(5,9): error TS2454: Variable 'i' is used before being assigned.


==== callExpressionWithTypeParameterConstrainedToOuterTypeParameter.ts (1 errors) ====
    interface I<T> {
        <U extends T>(u: U): U;
    }
    var i: I<string>;
    var y = i(""); // y should be string
            ~
!!! error TS2454: Variable 'i' is used before being assigned.